# mixed_reality_table

./: CMakeLists.txt  README.md  cm
fiducials/: .generate.py.swp  .generate_synthetic_data.py.swp  generate.py  generate_fiducials.py  generate_synthetic_data.py
generators/: CMakeLists.txt  generate_charuco.cpp
lib/: CMakeLists.txt
lib/libraspivid/: CMakeLists.txt
lib/libraspivid/examples/: CMakeLists.txt  example.cpp
lib/libraspivid/include/: RaspiPort.h  RaspiVid.h
lib/mrtable/: Aruco.hpp  CMakeLists.txt  ContourParams.hpp  DisplayFrame.hpp  FrameProcessor.hpp  ImageSource.hpp  MRTable.hpp  Otsu.hpp  OtsuCalc.hpp  ProcessQueue.hpp  ServerConfig.hpp  Source.hpp  TestProcessor.hpp  VideoSource.hpp  cmddefs.hpp  keydefs.hpp  mrtable.cpp  mrtable.hpp  parsers.hpp  result_t.hpp  settings.hpp
lib/mrtable/config/: ContourParams.hpp  DetectBounds.cpp  DetectBounds.hpp  ServerConfig.cpp  ServerConfig.h  ServerConfig.hpp  config.hpp  parsers.hpp
lib/mrtable/data/: Message.hpp  MessageBroker.hpp  MutexQueue.hpp  SharedData.hpp  data.hpp
lib/mrtable/process/: Aruco.hpp  ArucoCensor.hpp  ArucoCompute.hpp  ArucoDraw.hpp  Canny.hpp  Contour.hpp  ContourCompute.hpp  DisplayFrame.hpp  FrameProcessor.hpp  Grayscale.hpp  Marker.cpp  Marker.hpp  Otsu.hpp  OtsuCalc.hpp  ProcessQueue.hpp  ProcessorOutput.hpp  TestProcessor.hpp  Touch.cpp  Touch.hpp  keydefs.hpp  process.hpp  result_t.hpp
lib/mrtable/server/: CommandServer.bak  CommandServer.cpp  CommandServer.hpp  CommandSession.cpp  CommandSession.h  CommandSession.hpp  DetectBounds.hpp  DetectServer.hpp  DisconnectNotifier.cpp  DisconnectNotifier.h  ServerConnector.cpp  ServerConnector.h  TableServer.hpp  server.hpp
lib/mrtable/sources/: ImageSource.hpp  sources.hpp
lib/raspberrypi-omxcam/: CMakeLists.txt
lib/raspberrypi-omxcam/examples/: CMakeLists.txt
lib/raspberrypi-omxcam/examples/still/: CMakeLists.txt
lib/raspberrypi-omxcam/examples/still/jpeg/: jpeg.c
lib/raspberrypi-omxcam/examples/video/: CMakeLists.txt
lib/raspberrypi-omxcam/examples/video/h264-motion/: h264-motion.c
lib/raspberrypi-omxcam/examples/video/yuv/: yuv.c
lib/raspberrypi-omxcam/src/: dump_omx.c
lib/raspivid_port/: CMakeLists.txt
lib/raspivid_port/include/: MotionData.h  MotionRegion.h  MotionVectorCallback.h  MotionVectorPreviewCallback.h  RPiMotionCam.h  RaspiCallback.h  RaspiComponent.h  RaspiEncoder.h  RaspiNullsink.h  RaspiPort.h  RaspiPreview.h  RaspiRenderer.h  RaspiVid.h  RawOutputCallback.h
lib/raspivid_port/include/components/: RaspiCamera.h  RaspiEncoder.h  RaspiNullsink.h  RaspiOverlayRenderer.h  RaspiRenderer.h  RaspiResize.h  RaspiSplitter.h
lib/raspivid_port/src/: MotionData.cpp  MotionRegion.cpp  MotionVectorCallback.cpp  MotionVectorPreviewCallback.cpp  RPiMotionCam.cpp  RaspiComponent.cpp  RaspiEncoder.cpp  RaspiNullsink.cpp  RaspiPort.cpp  RaspiPreview.cpp  RaspiRenderer.cpp  RaspiVid.cpp  RawOutputCallback.cpp
lib/raspivid_port/src/components/: RaspiCamera.cpp  RaspiComponent.cpp  RaspiEncoder.cpp  RaspiNullsink.cpp  RaspiOverlayRenderer.cpp  RaspiRenderer.cpp  RaspiResize.cpp  RaspiSplitter.cpp
lib/raspivid_port/tests/: CMakeLists.txt  RPiMotionCamPreview.cpp  RPiOverlay.cpp  RectangleDetect.cpp
lib/rpi_motioncam/: CMakeLists.txt
lib/rpi_motioncam/include/: MotionData.h  MotionVectorCallback.h  MotionVectorPreviewCallback.h  RPiMotionCam.h  RawOutputCallback.h
lib/rpi_motioncam/lib/: CMakeLists.txt
lib/rpi_motioncam/src/: MotionData.cpp  MotionRegion.cpp  MotionVectorCallback.cpp  MotionVectorPreviewCallback.cpp  RPiMotionCam.cpp  RaspiPort.cpp  RawOutputCallback.cpp
lib/rpi_motioncam/tests/: CMakeLists.txt  RPiMotionCamPreview.cpp  RectangleDetect.cpp
lib/tuio/: CMakeLists.txt
lib/tuio/ip/: CMakeLists.txt
lib/tuio/osc/: CMakeLists.txt  OscHostEndianness.h
old/mrtable/: CMakeLists.txt
old/mrtable/config/: CMakeLists.txt  ContourParams.cpp  ContourParams.h  DetectBounds.cpp  DetectBounds.h  parsers.h
old/mrtable/data/: MessageBroker.hpp  MutexQueue.hpp
old/mrtable/process/: Aruco.hpp  ArucoCompute.hpp  Contour.hpp  ContourCompute.hpp  (+5 more)
old/src/: calibrate_camera.cpp
proxy/: proxy.py
raspbian/: required_packages.txt
scripts/: sweep_detect_blobs.sh  sweep_detect_markers.sh
src/: .detect_markers.cpp.swp  CMakeLists.txt  aruco_captuer.bak  calibrate_camera.cpp  capture.cpp  detect_blobs.cpp  detect_bounds.cpp  detect_contours.cpp  detect_markers.cpp  detect_server.cpp  generate_charuco.cpp  generate_markers.cpp  mrtable.cpp  mrtable.h  server.cpp  test_markers.cpp
src/config/: CMakeLists.txt  ServerConfig.cpp  config.h  parsers.cpp
src/mrtable_tuio/: CMakeLists.txt  StdErrSender.cpp  StdErrSender.h  TuioWrapper.cpp  TuioWrapper.h  mrtable_tuio.h
src/process/: ArucoFunctor.cpp  ArucoFunctor.h  BlobFunctor.cpp  BlobFunctor.h  CMakeLists.txt  ImgRecord.cpp  ImgRecord.h  InputFunctor.cpp  InputFunctor.h  OutputFunctor.cpp  OutputFunctor.h  RegionRecord.cpp  RegionRecord.h  ThresholdFunctor.cpp  ThresholdFunctor.h  process.cpp  process.h
src/process/tests/: CMakeLists.txt  test_process.cpp
src/rpi_motioncam/: CMakeLists.txt  RPiMotionCam.cpp  RPiMotionCam.h  RegionCallback.h  typedefs.cpp
src/rpi_motioncam/callbacks/: FramePreview.cpp  MotionData.cpp  MotionData.h  MotionFrame.cpp  MotionFrame.h  MotionRegion.cpp  MotionRegion.h  MotionRegionPreviewCallback.cpp  MotionRegionPreviewCallback.h  MotionVectorCallback.cpp  MotionVectorCallback.h  MotionVectorPreviewCallback.cpp  MotionVectorPreviewCallback.h  RawOutputCallback.cpp  RawOutputCallback.h
src/rpi_motioncam/tests/: GuiPreview.cpp  RPiMotionCamPreview.cpp  RectangleDetect.cpp
tech_tests/: CMakeLists.txt  RaspiVid.c  detect_blobs.cpp  detect_bounds.cpp  detect_contours.cpp  detect_markers.cpp  mmal_test.bak  mmal_test.bak2  mmal_test.c  mmal_test.cpp  omx_frames.cpp
test_data/ir_spectrum/: capture2.avi  capture3.avi  capture4.avi
test_files/: camera.xml  markers_4x4_250_set_1.docx
test_files/ir_spectrum/: capture1.avi
tuio_simulators/: CMakeLists.txt  SimpleSimulator.h  TuioDump.h
tuiotests/: SimpleSimulator.h
(+26 files in other folders)
