cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project(mixed_reality_table)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

find_package( OpenCV REQUIRED )
find_package( Boost REQUIRED system )
find_package( Threads REQUIRED )
find_package( Broadcom REQUIRED )
set(BUILD_TUIO_TESTS FALSE CACHE PATH "Build TUIO Test programs")
set(BUILD_OMX_EXAMPLES FALSE CACHE PATH "Build raspberrypi-omxcam example programs" )
add_subdirectory(lib)
include_directories("${PROJECT_SOURCE_DIR}/lib")
include_directories("${BROADCOM_INCLUDE_DIRS}")
add_executable(generate_markers src/generate_markers.cpp)
add_executable(generate_charuco src/generate_charuco.cpp)
add_executable(detect_markers src/detect_markers.cpp)
add_executable(calibrate_camera src/calibrate_camera.cpp)
add_executable(detect_blobs src/detect_blobs.cpp)
add_executable(detect_contours src/detect_contours.cpp)
add_executable(detect_bounds src/detect_bounds.cpp)
add_executable(server src/server.cpp)
add_executable(capture src/capture.cpp)
target_link_libraries(generate_markers ${OpenCV_LIBS} ${Boost_LIBRARIES} mrtable tuio)
target_link_libraries(detect_markers ${OpenCV_LIBS}  ${Boost_LIBRARIES} Threads::Threads mrtable tuio)
target_link_libraries(calibrate_camera ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads  mrtable tuio)
target_link_libraries(generate_charuco ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads mrtable tuio)
target_link_libraries(detect_blobs ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads mrtable tuio)
target_link_libraries(detect_contours ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads mrtable tuio)
target_link_libraries(detect_bounds ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads mrtable tuio)
target_link_libraries(server ${OpenCV_LIBS} ${Boost_LIBRARIES} Threads::Threads mrtable tuio )
target_link_libraries(capture ${OpenCV_LIBS} )

if(BUILD_TUIO_TESTS)
    find_package(GLUT REQUIRED)
    find_package(OpenGL REQUIRED)
    find_package( SDL REQUIRED )
    include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
    message("SDL: ${SDL_INCLUDE_DIR}")
    include_directories("${SDL_INCLUDE_DIR}")
    add_executable(dump tuiotests/TuioDump.cpp)
    add_executable(simulator tuiotests/SimpleSimulator.cpp)
    target_link_libraries(dump tuio)
    target_link_libraries(simulator ${GLUT_LIBRARY} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} tuio)
endif(BUILD_TUIO_TESTS)
