cmake_minimum_required(VERSION 3.1)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_CXX_STANDARD 11)
message(STATUS "Building mrtable")
add_definitions(-DTBB_USE_GCC_BUILTINS=1)
add_definitions(-D__TBB_64BIT_ATOMICS=0)
find_package(OpenCV REQUIRED)
find_package(TBB REQUIRED)
find_package(Broadcom REQUIRED)
find_package(MMAL REQUIRED)

add_subdirectory(lib)
add_subdirectory(src)
include_directories("${PROJECT_SOURCE_DIR}/lib")
include_directories("${RPI_MOTIONCAM_INCLUDE_DIRS}")
include_directories("${BROADCOM_INCLUDE_DIRS}")
include_directories("${MMAL_INCLUDE_DIRS}")
include_directories("src")
add_executable(mrtable src/mrtable.cpp)
target_link_libraries(mrtable tuio ${OpenCV_LIBS} rpi_motioncam tbb mrtable_config mrtable_tuio)
