message(STATUS "Building TUIO")
include_directories(ip osc)
add_subdirectory(ip)
add_subdirectory(osc)
add_library(tuio FlashSender.cpp OneEuroFilter.cpp TcpSender.cpp TuioBlob.cpp TuioClient.cpp TuioContainer.cpp TuioCursor.cpp TuioDispatcher.cpp TuioManager.cpp TuioObject.cpp TuioPoint.cpp TuioServer.cpp TuioTime.cpp UdpSender.cpp WebSockSender.cpp TcpReceiver.cpp TuioClient.cpp UdpReceiver.cpp OscReceiver.cpp)
target_link_libraries(tuio ip osc)
