add_executable(h264 h264/h264.c)
add_executable(h264-motion h264-motion/h264-motion.c)
add_executable(h264-motion-nopthread h264-motion-nopthread/h264-motion-nopthread.c)
add_executable(h264-nopthread h264-nopthread/h264-nopthread.c)
add_executable(h264-stdout h264-stdout/h264-stdout.c)
add_executable(h264-update h264-update/h264-update.c)
add_executable(h264-update-timer h264-update-timer/h264-update-timer.c)
add_executable(video-rgb rgb/rgb.c)
add_executable(video-yuv yuv/yuv.c)

target_link_libraries(h264 ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-motion ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-motion-nopthread ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-nopthread ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-stdout ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-update ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(h264-update-timer ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(video-rgb ${BROADCOM_LIBRARIES} raspberrypi-omxcam )
target_link_libraries(video-yuv ${BROADCOM_LIBRARIES} raspberrypi-omxcam )

